Fix: light-Dark mode, Update: content(30%)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,12 @@
     font-family: "Poppins";
     scroll-padding: 70px;
 }
+
+.bg-slate-600 {
+    background-color: #374151;
+  }
+  
+  [data-theme="dark"] .bg-slate-600 {
+    background-color: #ffffff;
+  }
+  
